Added additional info about BERT.

--- a/experiments/NLP_the_age_of_transformers.ipynb
+++ b/experiments/NLP_the_age_of_transformers.ipynb
@@ -5,16 +5,32 @@
    "metadata": {},
    "source": [
     "Reference:\n",
+    "- https://habr.com/ru/company/mipt/blog/462989/ - explains shortly the corresponding pros and cons of BERT (ru).\n",
+    "- https://docs.deeppavlov.ai/en/master/features/models/bert.html#using-custom-bert-in-deeppavlov - docs about BERT in DeepPavlov, examples of model pretrained on russian language, etc. (ru).\n",
     "- https://www.youtube.com/watch?v=S-CspeZ8FHc&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=13\n",
     "- https://blog.scaleway.com/2019/building-a-machine-reading-comprehension-system-using-the-latest-advances-in-deep-learning-for-nlp/\n",
     "- https://blog.scaleway.com/2019/understanding-text-with-bert/\n",
     "- http://jalammar.github.io/illustrated-bert/\n",
+    "- https://towardsdatascience.com/how-bert-leverage-attention-mechanism-and-transformer-to-learn-word-contextual-relations-5bbee1b6dbdb\n",
     "\n",
     "Tutorials:\n",
     "- https://towardsdatascience.com/bert-for-dummies-step-by-step-tutorial-fb90890ffe03\n",
     "- https://medium.com/swlh/a-simple-guide-on-using-bert-for-text-classification-bbf041ac8d04\n",
-    "- https://www.analyticsvidhya.com/blog/2019/09/demystifying-bert-groundbreaking-nlp-framework/"
+    "- https://www.analyticsvidhya.com/blog/2019/09/demystifying-bert-groundbreaking-nlp-framework/\n",
+    "\n",
+    "**Top Materials:**\n",
+    "- https://mccormickml.com/2020/03/10/question-answering-with-a-fine-tuned-BERT/\n",
+    "\n",
+    "Simple:\n",
+    "- https://peltarion.com/knowledge-center/documentation/tutorials/movie-review-feelings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
