--- a/experiments/NLP_the_age_of_transformers.ipynb
+++ b/experiments/NLP_the_age_of_transformers.ipynb
@@ -7,7 +7,8 @@
     "Reference:\n",
     "- https://habr.com/ru/company/mipt/blog/462989/ - explains shortly the corresponding pros and cons of BERT (ru).\n",
     "- https://docs.deeppavlov.ai/en/master/features/models/bert.html#using-custom-bert-in-deeppavlov - docs about BERT in DeepPavlov, examples of model pretrained on russian language, etc. (ru).\n",
-    "- https://www.youtube.com/watch?v=S-CspeZ8FHc&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=13\n",
+    "- https://www.youtube.com/watch?v=S-CspeZ8FHc&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=13 - The most detailed lecture i've seen about history of preceded models before transformers/architectures/*name * it and overall statistics about NLP at all.\n",
+    "- https://www.youtube.com/watch?v=5vcj8kSwBCY&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=14\n",
     "- https://blog.scaleway.com/2019/building-a-machine-reading-comprehension-system-using-the-latest-advances-in-deep-learning-for-nlp/\n",
     "- https://blog.scaleway.com/2019/understanding-text-with-bert/\n",
     "- http://jalammar.github.io/illustrated-bert/\n",
