Add notebook with experiments, link to google colab.

--- a/experiments/NLP_the_age_of_transformers.ipynb
+++ b/experiments/NLP_the_age_of_transformers.ipynb
@@ -4,12 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Theory:\n",
+    "- https://www.grammarly.com/blog/engineering/under-the-hood-at-grammarly-leveraging-transformer-language-models-for-grammatical-error-correction/\n",
+    "- https://www.grammarly.com/blog/engineering/understanding-conversational-sequences-with-ai/\n",
+    "\n",
+    "\n",
     "Reference:\n",
     "- https://habr.com/ru/company/mipt/blog/462989/ - explains shortly the corresponding pros and cons of BERT (ru).\n",
     "- https://docs.deeppavlov.ai/en/master/features/models/bert.html#using-custom-bert-in-deeppavlov - docs about BERT in DeepPavlov, examples of model pretrained on russian language, etc. (ru).\n",
     "- https://www.youtube.com/watch?v=S-CspeZ8FHc&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=13 - The most detailed lecture i've seen about history of preceded models before transformers/architectures/*name * it and overall statistics about NLP at all.\n",
-    "- https://www.youtube.com/watch?v=5vcj8kSwBCY&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=14\n",
-    "- https://blog.scaleway.com/2019/building-a-machine-reading-comprehension-system-using-the-latest-advances-in-deep-learning-for-nlp/\n",
+    "- https://www.youtube.com/watch?v=5vcj8kSwBCY&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=14 - lecture from author of transformers.\n",
+    "- https://blog.scaleway.com/2019/building-a-machine-reading-comprehension-system-using-the-latest-advances-in-deep-learning-for-nlp/ - comprehensive intro to transformets, it's history, pros/cons.\n",
     "- https://blog.scaleway.com/2019/understanding-text-with-bert/\n",
     "- http://jalammar.github.io/illustrated-bert/\n",
     "- https://towardsdatascience.com/how-bert-leverage-attention-mechanism-and-transformer-to-learn-word-contextual-relations-5bbee1b6dbdb\n",
@@ -24,6 +29,22 @@
     "\n",
     "Simple:\n",
     "- https://peltarion.com/knowledge-center/documentation/tutorials/movie-review-feelings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiments\n",
+    "\n",
+    "- https://colab.research.google.com/drive/1GZrgIHptfk49Wm-gjixmv-BtG9bOseKt?usp=sharing - There are information related to transformers, generally the top-down approach presented."
    ]
   },
   {
